package Model;

public abstract class Contractor implements Cloneable{
    private final long ID;
    private String name;
    private String address;
    private String information;
    private String passport;
    private String phone;
    private String bankRequisites;
    private String IIN;
    private String KPP;

    private boolean isActive;

    public Contractor(long ID,String name) {
        this.ID=ID;
        this.name = name;
    }

    public long getID() {
        return ID;
    }
    public String getName() {
        return name;
    }
    public void setName(String name) {
        this.name = name;
    }
    public String getAddress() {
        return address;
    }
    public void setAddress(String address) {
        this.address = address;
    }
    public String getInformation() {
        return information;
    }
    public void setInformation(String information) {
        this.information = information;
    }
    public String getPassport() {
        return passport;
    }
    public void setPassport(String passport) {
        this.passport = passport;
    }
    public String getPhone() {
        return phone;
    }
    public void setPhone(String phone) {
        this.phone = phone;
    }
    public String getBankRequisites() {
        return bankRequisites;
    }
    public void setBankRequisites(String bankRequisites) {
        this.bankRequisites = bankRequisites;
    }
    public String getIIN() {
        return IIN;
    }
    public void setIIN(String IIN) {
        this.IIN = IIN;
    }
    public String getKPP() {
        return KPP;
    }
    public void setKPP(String KPP) {
        this.KPP = KPP;
    }

    public boolean isActive() {
        return isActive;
    }

    public void setActive(boolean active) {
        isActive = active;
    }

    @Override
    public String toString() {
        return name;
    }

    @Override
    public Contractor clone() {
        try {
            Contractor clone = (Contractor) super.clone();
            // TODO: copy mutable state here, so the clone can't change the internals of the original
            return clone;
        } catch (CloneNotSupportedException e) {
            throw new AssertionError();
        }
    }
}
