package Model;

public class Customer extends Contractor{
    public Customer(long ID, String name) {
        super(ID, name);
    }
}
