package Model;

public enum Permission {
    EditingUsersAndPositions,
    EditingWarehouseInformation,
    ProductEditing,
    ProductLogistic,
    EditingContactor,
    ViewBook;
}